# vite-to-flask

./: .gitignore  README.md  pyproject.toml
app_flask_demo/: __init__.py
app_flask_demo/extensions/: __init__.py
app_flask_demo/vtf/app_vite_demo/: index-9511eedb.css  index-9a82b860.js
app_flask_demo/www/: __init__.py
app_flask_demo/www/templates/www/: index.html
app_vite_demo/: Index.jsx  __router__.jsx  index.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
requirements/: needed.txt
vite_to_flask/: __init__.py  _html_tags.py  flask_extension.py  helpers.py  parser.py
